// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management large image component renders SVG with proper height and width 1`] = `
<div
  class="gl-mx-auto gl-my-auto js-design-image"
>
  <img
    alt="test"
    class="gl-border gl-max-h-full img-fluid"
    src="mockImage.svg"
  />
</div>
`;

exports[`Design management large image component renders image 1`] = `
<div
  class="gl-mx-auto gl-my-auto js-design-image"
>
  <img
    alt="test"
    class="gl-border gl-max-h-full img-fluid"
    src="test.jpg"
  />
</div>
`;

exports[`Design management large image component renders loading state 1`] = `
<div
  class="gl-mx-auto gl-my-auto js-design-image"
  isloading="true"
>
  <img
    alt=""
    class="gl-border gl-max-h-full img-fluid"
    src="null"
  />
</div>
`;

exports[`Design management large image component renders media broken icon on error 1`] = `
<gl-icon-stub
  name="media-broken"
  size="48"
  variant="disabled"
/>
`;

exports[`Design management large image component sets correct classes and styles if imageStyle is set 1`] = `
<div
  class="gl-mx-auto gl-my-auto js-design-image"
>
  <img
    alt="test"
    class="gl-border gl-max-h-full"
    src="test.jpg"
    style="width: 100px; height: 100px;"
  />
</div>
`;

exports[`Design management large image component zoom sets image style when zoomed 1`] = `
<div
  class="gl-mx-auto gl-my-auto js-design-image"
>
  <img
    alt="test"
    class="gl-border gl-max-h-full"
    src="test.jpg"
    style="width: 200px; height: 200px;"
  />
</div>
`;
